# Test-VS-bom

./: .dockerignore  .gitignore  Dockerfile  Test.ipynb  Test.py  convert_ipynb_to_py.py  main.py  pyproject.toml
