[project]
name = "demographicpro-vs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "snowflake-connector-python>=4.1.0",
    "xlsxwriter>=3.2.9",
    "azure-identity>=1.25.1",
    "azure-storage-blob>=12.27.1",
    "azure-storage-file-datalake>=12.22.0",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "ipython>=9.10.0",
]
